--- a/classy/templates/classy/home.html
+++ b/classy/templates/classy/home.html
@@ -15,11 +15,6 @@
 </head>
 <body>
 {% include 'classy/navbar.html' %}
-<ul class="nav">
-	<li class="nav-item">
-		<span class="badge badge-info">INFO</span>
-	</li>
-</ul>
 <br/>
 <div class="container-fluid">
 <div class="row">
@@ -57,12 +52,12 @@ data = {
         data: {{data_cons}},
 
 	backgroundColor: [
-		'#e6ffff',
-		'#d9ffb3',
-		'#eeccff',
-		'#ffffb3',
-		'#ffccb3',
-		'#ff9999'	
+		'#A0CCDA',
+		'#7CE577',
+		'#94778B',
+		'#E9CE2C',
+		'#DE541E',
+		'#BF211E'	
 	]
 
     }],
