--- a/classy/templates/classy/index.html
+++ b/classy/templates/classy/index.html
@@ -8,11 +8,10 @@
 {% load static %}
 <link rel="shortcut icon" href="{% static 'classy/watching.jpg' %}" type="image/x-icon">
 <link rel="icon" href="{% static 'classy/watching.jpg' %}" type="image/x-icon">
-<link rel='stylesheet' href="{% static 'classy/index.css' %}">
+<link rel="stylesheet" href="{% static 'classy/index.css' %}">
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
 
 </head>
 
