--- a/classy/templates/classy/data_tables.html
+++ b/classy/templates/classy/data_tables.html
@@ -50,8 +50,9 @@
         <div class="col-sm-2">
 	<br/><br/>
 <!--	<form class="form-inline">-->
-	<label for="sizi">Show</label>
 	<div class="input-group">
+	<label for="id_size">Results per page: &nbsp</label>
+	
 	{{form.size}}
 	</div>
 	<!--
@@ -279,47 +280,28 @@
 <nav aria-label="Page navigation example">
   <ul class="pagination">
 {% if not queryset.has_previous %}
-    <li class="page-item disabled"><a class="page-link" href="#">First ...</a></li>
+    <li class="page-item disabled"><a class="page-link" href="#">&laquo; First ...</a></li>
     <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
 {% else %}
-    <li class="page-item"><a class="page-link" href="?page=1&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}
-                &column={{co}}&classi={{classi}}">First ...</a></li>
-    <li class="page-item"><a class="page-link" href="#">{{queryset.previous_page_number}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page=1&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}
+                &column={{co}}&classi={{classi}}">&laquo; First ...</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ queryset.previous_page_number }}&size={{size}}&query={{query}}&data_source={{ds}}&
+                schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}"">{{queryset.previous_page_number}}</a></li>
 {% endif %}
 
     <li class="page-item active"><a class="page-link" href="#">{{queryset.number}}</a></li>
 
 {% if not queryset.has_next %}
     <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
-    <li class="page-item disabled"><a class="page-link" href="#">{{queryset.paginator.num_pages}}</a></li>
+    <li class="page-item disabled"><a class="page-link" href="#">... {{queryset.paginator.num_pages}} &raquo;</a></li>
 {% else %} 
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    <li class="page-item"><a class="page-link" href="#">{{queryset.paginator.num_pages}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ queryset.next_page_number }}&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">{{queryset.next_page_number}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ queryset.paginator.num_pages }}&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">... {{queryset.paginator.num_pages}} &raquo;</a></li>
 
 {% endif %}
   </ul>
 </nav>
 
-
-<div class="pagination">
-    <span class="step-links">
-        {% if queryset.has_previous %}
-            <a href="?page=1&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}
-		&column={{co}}&classi={{classi}}">&laquo; first</a>
-            <a href="?page={{ queryset.previous_page_number }}&query={{query}}&data_source={{ds}}&
-		schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">previous</a>
-        {% endif %}
-
-        <span class="current">
-            Page {{ queryset.number }} of {{ queryset.paginator.num_pages }}.
-        </span>
-
-        {% if queryset.has_next %}
-            <a href="?page={{ queryset.next_page_number }}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">next</a>
-            <a href="?page={{ queryset.paginator.num_pages }}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">last &raquo;</a>
-        {% endif %}
-    </span>
-</div>
 </div>
 <div class="col-sm-1">
 	<button class="btn btn-sm btn secondary" id="edito" data-toggle="modal" data-target="#batchModal">Edit Selected</button>
