--- a/classy/templates/classy/data_tables.html
+++ b/classy/templates/classy/data_tables.html
@@ -286,9 +286,9 @@
     <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
 {% else %}
     <li class="page-item"><a class="page-link" href="?page=1&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}
-                &column={{co}}&classi={{classi}}">&laquo; First ...</a></li>
+                &column={{co}}{%for i in classi %}&classi={{i}}{%endfor%}{% for i in stati %}&stati={{i}}{% endfor%}">&laquo; First ...</a></li>
     <li class="page-item"><a class="page-link" href="?page={{ queryset.previous_page_number }}&size={{size}}&query={{query}}&data_source={{ds}}&
-                schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}"">{{queryset.previous_page_number}}</a></li>
+                schema={{sch}}&table={{tab}}&column={{co}}{%for i in classi %}&classi={{i}}{%endfor%}{% for i in stati %}&stati={{i}}{% endfor%}">{{queryset.previous_page_number}}</a></li>
 {% endif %}
 
     <li class="page-item active"><a class="page-link" href="#">{{queryset.number}}</a></li>
@@ -297,8 +297,10 @@
     <li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
     <li class="page-item disabled"><a class="page-link" href="#">... {{queryset.paginator.num_pages}} &raquo;</a></li>
 {% else %} 
-    <li class="page-item"><a class="page-link" href="?page={{ queryset.next_page_number }}&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">{{queryset.next_page_number}}</a></li>
-    <li class="page-item"><a class="page-link" href="?page={{ queryset.paginator.num_pages }}&size={{size}}&query={{query}}&data_source={{ds}}&schema={{sch}}&table={{tab}}&column={{co}}&classi={{classi}}">... {{queryset.paginator.num_pages}} &raquo;</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ queryset.next_page_number }}&size={{size}}&query={{query}}&data_source={{ds}}
+	&schema={{sch}}&table={{tab}}&column={{co}}{%for i in classi %}&classi={{i}}{%endfor%}{% for i in stati %}&stati={{i}}{% endfor%}">{{queryset.next_page_number}}</a></li>
+    <li class="page-item"><a class="page-link" href="?page={{ queryset.paginator.num_pages }}&size={{size}}&query={{query}}&data_source={{ds}}
+		&schema={{sch}}&table={{tab}}&column={{co}}{%for i in classi %}&classi={{i}}{%endfor%}{% for i in stati %}&stati={{i}}{% endfor%}">... {{queryset.paginator.num_pages}} &raquo;</a></li>
 
 {% endif %}
   </ul>
