--- a/classy/templates/classy/home.html
+++ b/classy/templates/classy/home.html
@@ -28,6 +28,9 @@
 </div>
 
 <div class="row">
+</div>
+
+<div class="row justify-content-end" style="position:absolute; bottom: 100px; width:100%;">
 <div class="col">
 <table class="table">
 <thead>
