--- a/static/classy/css/style.css
+++ b/static/classy/css/style.css
@@ -5,6 +5,28 @@ td {
 	-webkit-user-select: none; /* Webkit (Safari, Chrome) */
 }
 
+#wheel {
+    display:    none;
+    position:   fixed;
+    z-index:    1060;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .6 ) 
+                url('images/ajax-loader.gif') 
+                50% 50% 
+                no-repeat;
+}
+
+body.loading #wheel {
+	overflow: hidden;
+}
+
+body.loading #wheel {
+	display: block;
+}
+
 .navbar-light .navbar-nav .nav-link {
 	color: #fff;
 }
@@ -16,6 +38,28 @@ td {
 .thead-inverse tr th {
 	background-color: #79aec8;
 	color: #fff;
+}
+
+.business-header{
+  height: 40vh !important;
+  min-height: 300px;
+  background: url('http://absarokarealty.com/wp-content/uploads/mountains.jpg') center center no-repeat scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+
+}
+
+canvas {
+	/*max-height: 400px !important;
+	height: 30vh;
+	min-height: 300px;
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	background-size: cover;
+  	-o-background-size: cover;
+	*/
 }
 
 #bootstrapoverride {
